[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Elfboyclassic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]
[ext_resource path="res://interface/grid_new.png" type="Texture" id=3]
[ext_resource path="res://fonts/elfboy_48.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 1 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SidePanel" type="GridContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 827.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="SidePanel"]
margin_right = 200.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "SCORE"
align = 1

[node name="Score" type="Label" parent="SidePanel"]
margin_top = 42.0
margin_right = 200.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 4 )
text = "999999
"
align = 1

[node name="LevelLabel" type="Label" parent="SidePanel"]
margin_top = 125.0
margin_right = 200.0
margin_bottom = 163.0
custom_fonts/font = ExtResource( 4 )
text = "Level"
align = 1

[node name="Level" type="Label" parent="SidePanel"]
margin_top = 167.0
margin_right = 200.0
margin_bottom = 246.0
custom_fonts/font = ExtResource( 4 )
text = "0
"
align = 1

[node name="NextLabel" type="Label" parent="SidePanel"]
margin_top = 250.0
margin_right = 200.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 4 )
text = "Next"
align = 1

[node name="NextBlock" type="TextureRect" parent="SidePanel"]
margin_top = 292.0
margin_right = 200.0
margin_bottom = 492.0
rect_min_size = Vector2( 200, 200 )
expand = true

[node name="NextLabel2" type="Label" parent="SidePanel"]
margin_top = 496.0
margin_right = 200.0
margin_bottom = 575.0
custom_fonts/font = ExtResource( 4 )
text = "
Hold"
align = 1

[node name="HoldBlock" type="TextureRect" parent="SidePanel"]
margin_top = 579.0
margin_right = 200.0
margin_bottom = 779.0
rect_min_size = Vector2( 200, 200 )
expand = true

[node name="BackButton" type="Button" parent="SidePanel"]
margin_top = 783.0
margin_right = 200.0
margin_bottom = 827.0
custom_fonts/font = ExtResource( 4 )
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
margin_right = 768.0
margin_bottom = 1408.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CenterContainer"]
margin_left = 190.0
margin_top = 641.0
margin_right = 577.0
margin_bottom = 766.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="SidePanel/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="CenterContainer/Button" to="." method="_on_Button_pressed"]
